--- a/board.html
+++ b/board.html
@@ -105,7 +105,7 @@
     </div>
     <script src="./javascript/signup.js"></script>
     <script src="./javascript/JSON/tasks.js"></script>
-    <script src="./javascript/summary.js"></script>
+    <!-- <script src="./javascript/summary.js"></script> -->
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/board.js"></script>
